ボタン変更

--- a/app/views/categories/start.html.erb
+++ b/app/views/categories/start.html.erb
@@ -1,3 +1,3 @@
 <h1>説明</h1>
 
-<%= link_to "始める", category_path(@category), class: "btn btn-primary m-2" %>
+<%= link_to "始める", category_path(@category), class: "inline-block px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 m-2" %>
