--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
   </head>
 
-  <body>
+  <body class='text-center bg-yellow-200'>
     <%= render 'shared/header' %>
     <%= render 'shared/flash_message' %>
     <%= yield %>
