--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,15 +15,17 @@
     <link rel="apple-touch-icon" href="/icon.png">
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
+    
   </head>
 
-  <body class='text-center bg-yellow-200'>
-    <%= render 'shared/header' %>
-    <%= render 'shared/flash_message' %>
+  <body class="text-center font-dot">
+    <div style="background-image: url('/images/mashu.png'); background-size: cover; background-position: center; height: 100vh;">
+    <%= render "shared/header" %>
+    <%= render "shared/flash_message" %>
     <%= yield %>
-    <%= render 'shared/footer' %>
+    <%= render "shared/footer" %>
     <!-- confetti ライブラリ読み込み -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.3.2/dist/confetti.browser.min.js"></script>
-
+    </div>
   </body>
 </html>
