--- a/app/views/categories/start.html.erb
+++ b/app/views/categories/start.html.erb
@@ -1,3 +1,18 @@
-<h1>説明</h1>
+<div class="layout-main">
+  <div class="layout-section bg-green/30 backdrop-invert backdrop-opacity-30">
+    <h1 class="text-5xl">【説明】</h1>
+      <ul>
+        <li class="space-y-5 mt-10 text-2xl">
+          <p>問題が５問出題されます</p>
+          <p>言葉の意味を選択してください</p>
+          <p>全問正解するまでチャレンジしてみてね</p>
+        </li>
+      </ul>
 
-<%= link_to "始める", category_path(@category), class: "inline-block px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 m-2" %>
+      <%= link_to category_path(@category), class: "text-2xl mt-10 group block hover:text-gray-300 transition-colors duration-200" do %>
+      <span class="relative pl-6 before:absolute before:left-0 before:opacity-0 group-hover:before:opacity-100 group-hover:before:content-['▶']">
+          始める
+      </span>
+      <% end %>
+  </div>
+</div>
