--- a/app/views/quiz/result.html.erb
+++ b/app/views/quiz/result.html.erb
@@ -1,14 +1,18 @@
-
-<h2><%= @score %> / <%= @question_size %> 問正解！</h2>
-<%= link_to "もう一度挑戦", categories_path %>
-
-<!-- ページ表示時に実行 -->
-<script>
-  document.addEventListener("DOMContentLoaded", function() {
-    confetti({
-      particleCount: 100,
-      spread: 70,
-      origin: { y: 0.6 }
-    });
-  });
-</script>
+<div class="layout-main">
+  <div class="layout-section bg-green/30 backdrop-invert backdrop-opacity-30">
+    <h2 class="text-5xl"><%= @score %> / <%= @question_size %> 問正解！</h2>
+    <div class="text-lg mt-10 flex">
+      <%= link_to "もう一度挑戦", categories_path %>
+    </div>
+    <!-- ページ表示時に実行 -->
+    <script>
+      document.addEventListener("DOMContentLoaded", function() {
+        confetti({
+          particleCount: 100,
+          spread: 70,
+          origin: { y: 0.6 }
+        });
+      });
+    </script>
+  </div>
+</div>
