--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -4,8 +4,8 @@
     <ul class="flex flex-col space-y-5 mt-10 text-2xl">
       <% @categories.each do |category| %>
         <li>
-          <%= link_to start_category_path(category), class: "action-link" do %>
-            <span class="action-link-text">
+          <%= link_to start_category_path(category), class: "group block hover:text-gray-300 transition-colors duration-200" do %>
+            <span class="relative pl-6 before:absolute before:left-0 before:opacity-0 group-hover:before:opacity-100 group-hover:before:content-['▶']">
               <%= category.name %>
             </span>
           <% end %>
