全問正解者特別ページ作成

--- a/app/views/quiz/result.html.erb
+++ b/app/views/quiz/result.html.erb
@@ -1,8 +1,9 @@
 <div class="layout-main">
   <div class="layout-section bg-green/30 backdrop-invert backdrop-opacity-30">
-    <h2 class="text-5xl"><%= @score %> / <%= @question_size %> 問正解！</h2>
+    <h2 class="text-5xl">全問正解！おめでとうございます🎉</h2>
+      <p>あなたは真の<% catregory.name %>の民ですね</p>
       <div class="text-lg text-black mt-10 flex">
-        <%= link_to "もう一度挑戦", categories_path %>
+        <%= link_to "別のカテゴリで再挑戦", categories_path %>
         <%= link_to "Xでシェア","https://twitter.com/intent/tweet?" +
         "url=#{root_url}result/#{@score}" +
         "&text=#{CGI.escape("世代別言葉クイズ！#{@category.name}カテゴリで#{@score}点だったよー！！！ないすー！")}" +
@@ -10,7 +11,7 @@
         target: "_blank", rel: "noopener", class: "ml-4" %>
       </div>
     
-    <!-- ページ表示時に実行 -->
+    <!-- 紙吹雪 -->
     <script>
       document.addEventListener("DOMContentLoaded", function() {
         confetti({
