--- a/app/views/categories/start.html.erb
+++ b/app/views/categories/start.html.erb
@@ -3,8 +3,9 @@
     <h1 class="text-5xl">【説明】</h1>
       <ul>
         <li class="space-y-5 mt-10 text-2xl">
-          <p>問題が５問出題されます</p>
-          <p>言葉の意味を選択してください</p>
+          <p>問題が５問出題されるよ</p>
+          <p>言葉の意味を選択して回答をおしてね</p>
+          <p class="text-yellow-300">★全問正解者は特別なページに・・・？</p>
           <p>全問正解するまでチャレンジしてみてね</p>
         </li>
       </ul>
