--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -19,7 +19,7 @@
           </div>
         <% end %>
       </div>
-      <%= button_tag "回答", class: "text-white  hover:text-yellow-300 hover-action hover:before:text-yellow-300 mt-4" %>
+      <%= button_tag "回答", class: "text-black hover-action mt-4" %>
 
     <% end %>
   </div>
