--- a/app/views/quiz/result.html.erb
+++ b/app/views/quiz/result.html.erb
@@ -1,17 +1,24 @@
 <div class="layout-main">
   <div class="layout-section bg-green/30 backdrop-invert backdrop-opacity-30">
     <h2 class="text-5xl"><%= @score %> / <%= @question_size %> 問正解！</h2>
-    <div class="text-lg mt-10 flex">
-      <%= link_to "もう一度挑戦", categories_path %>
-    </div>
-    <!-- ページ表示時に実行 -->
+    <p class="text-2xl mt-10">残念😢<%= @category.name %>の民ではないようです・・・</p>
+    <p class="text-2xl">全問正解するまで挑戦してみよう！</p>
+   
+      <div class="text-xl text-black mt-10 flex space-x-6">
+        <%= link_to "もう一度挑戦", categories_path, class: "hover-action" %>
+        <%= link_to "Xでシェア","https://twitter.com/intent/tweet?" +
+        "url=#{root_url}result/#{@score}" +
+        "&text=#{CGI.escape("世代別言葉クイズ！#{@category.name}カテゴリで#{@score}点だったよー！！！ないすー！")}" +
+        "&hashtags=#{CGI.escape("世代別言葉クイズ")}",
+        target: "_blank", rel: "noopener", class: "hover-action" %>
+      </div>
+    
+    <!-- 紙吹雪 -->
     <script>
-      document.addEventListener("DOMContentLoaded", function() {
-        confetti({
-          particleCount: 100,
-          spread: 70,
-          origin: { y: 0.6 }
-        });
+      confetti({
+        particleCount: 100,
+        spread: 70,
+        origin: { y: 0.6 }
       });
     </script>
   </div>
