--- a/app/views/quiz/result.html.erb
+++ b/app/views/quiz/result.html.erb
@@ -2,7 +2,8 @@
   <div class="layout-section bg-green/30 backdrop-invert backdrop-opacity-30">
 
     <h2 class="text-5xl"><%= @score %> / <%= @question_size %> 問正解！</h2>
-    <p class="text-2xl mt-10">残念😢<%= @category.name %>の民ではないようです・・・</p>
+    <p class="text-2xl mt-10">残念😢</p>
+    <p class="text-2xl "><%= @category.name %>の民ではないようです・・・</p>
     <p class="text-2xl">全問正解するまで挑戦してみよう！</p>
    
       <div class="text-xl text-black mt-10 flex space-x-6">
