--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -5,7 +5,7 @@
 
 
     <!-- 解答 -->
-    <%= form_with url: quiz_answer_path, method: :post, local: true do %>
+    <%= form_with url: answer_category_path, method: :post, local: true do %>
       <div class="flex flex-col space-y-8">
         <% @question.choices.each do |choice| %>
           <div>
