--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,18 +1,22 @@
 <div class="layout-main">
+
+    <%= render "shared/flash_message" %>
+
+
   <div class="layout-section bg-green/30 backdrop-invert backdrop-opacity-30 space-y-5 mt-10 text-2xl">
   <!-- 問題 -->
       <h1 class="text-black">Q問題:<%= @question.term %></h1>
 
 
     <!-- 解答 -->
-    <%= form_with url: answer_category_path, method: :post, local: true do %>
+    <%= form_with url: answer_category_path, method: :post, data: { turbo: false } do %>
       <div class="flex flex-col space-y-8">
         <% @question.choices.each do |choice| %>
           <div>
             <!-- ラジオボタンは非表示に -->
             <%= radio_button_tag :answer, choice.id, false, id: "choice_#{choice.id}", class: "hidden peer" %>
 
-            <!-- ラベルを装飾して選択肢UIに -->
+            <!-- 選択肢 -->
             <%= label_tag "choice_#{choice.id}", class: "choice-label" do %>
               <%= choice.content %>
             <% end %>
