--- a/app/views/shared/_flash_message.html.erb
+++ b/app/views/shared/_flash_message.html.erb
@@ -1,16 +1,23 @@
-<div class="flash-message">
-  <% flash.each do |message_type, message| %>
-    <div class="
-      px-4 py-3 rounded mb-4
-      <% if message_type == 'notice' %>
-        bg-blue-100 text-blue-800
-      <% elsif message_type == 'alert' %>
-        bg-red-100 text-red-800
-      <% else %>
-        bg-gray-100 text-gray-800
-      <% end %>
-    ">
-      <%= message %>
+<% if flash[:notice] %>
+  <div class="flex justify-center mb-4">
+    <div class="bg-blue-100 text-blue-800 px-6 py-3 rounded-xl shadow inline-block text-center">
+      <%= flash[:notice] %>
     </div>
-  <% end %>
-</div>
+  </div>
+<% end %>
+
+<% if flash[:alert] %>
+  <div class="flex justify-center mb-4">
+    <div class="bg-red-100 text-red-800 px-6 py-3 rounded-xl shadow inline-block text-center">
+      <%= flash[:alert] %>
+    </div>
+  </div>
+<% end %>
+
+<% if flash[:error] %>
+  <div class="flex justify-center mb-4">
+    <div class="bg-gray-100 text-gray-800 px-6 py-3 rounded-xl shadow inline-block text-center">
+      <%= flash[:error] %>
+    </div>
+  </div>
+<% end %>
