全問正解者ページの修正

--- a/app/views/quiz/perfect.html.erb
+++ b/app/views/quiz/perfect.html.erb
@@ -2,7 +2,7 @@
   <div class="layout-section bg-green/30 backdrop-invert backdrop-opacity-30">
     <h2 class="text-5xl">全問正解！</h2>
     <h2 class="text-5xl">おめでとうございます🎉🎉🎉</h2>
-      <p class="text-2xl mt-10">🎖️あなたは<strong><%= @category.name %></strong>のレジェンドですね！🎖️</p>
+      <p class="text-2xl mt-10">🎖️あなたは<strong class="text-yellow-300">真の<%= @category.name %></strong>の民ですね！🎖️</p>
     <div class="text-6xl mt-4 animate-bounce">🐥🐧🦍🐬🐱</div>
 
       <div class="text-lg text-black mt-10 flex space-x-6">
