--- a/app/views/quiz/result.html.erb
+++ b/app/views/quiz/result.html.erb
@@ -9,9 +9,10 @@
       <div class="text-xl text-black mt-10 flex space-x-6">
         <%= link_to "もう一度挑戦", categories_path, class: "hover-action" %>
 
+      <!-- Xシェア -->
         <%= link_to "Xでシェア","https://twitter.com/intent/tweet?" +
-        "url=#{root_url}result/#{@score}" +
-        "&text=#{CGI.escape("世代別言葉クイズ！#{@category.name}カテゴリで#{@score}点だったよー！！！ないすー！")}" +
+        "text=#{CGI.escape("世代別言葉クイズ！#{@category.name}カテゴリで#{@score}点だったよー！！！ないすー！")}" +
+        "&url=#{root_url}" +
         "&hashtags=#{CGI.escape("世代別言葉クイズ")}",
         target: "_blank", rel: "noopener", class: "hover-action" %>
 
