--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <%= display_meta_tags(default_meta_tags) %>
+
     <%= yield :head %>
 
     <link rel="manifest" href="/manifest.json">
