--- a/app/views/categories/start.html.erb
+++ b/app/views/categories/start.html.erb
@@ -10,10 +10,13 @@
         </li>
       </ul>
 
-      <%= link_to category_path(@category), class: "text-2xl mt-10 group block hover:text-gray-300 transition-colors duration-200" do %>
-      <span class="relative pl-6 before:absolute before:left-0 before:opacity-0 group-hover:before:opacity-100 group-hover:before:content-['▶']">
-          始める
-      </span>
+      <%= form_with url: category_path(@category), method: :post, data: { turbo: false }, class: "mt-10" do %>
+        <button type="submit" class="text-2xl group block hover:text-gray-300 transition-colors duration-200">
+          <span class="relative pl-6 before:absolute before:left-0 before:opacity-0 group-hover:before:opacity-100 group-hover:before:content-['▶']">
+            始める
+          </span>
+        </button>
       <% end %>
+
   </div>
 </div>
